# QSFML_EditorWidget

./: .gitignore  .gitmodules  CMakeBuildCache.bat  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  QSFML_EditorWidget.cmake  QtLocator.cmake  README.md  SFML_EditorWidget.cpp  SFML_EditorWidget.h  SFML_EditorWidget.pri  SFML_EditorWidget.sln  SFML_EditorWidget.vcxproj  SFML_EditorWidget.vcxproj.filters  build.bat  dependencies.cmake  main.cpp
Examples/: CMakeLists.txt
Examples/CollisionExample/: CMakeLists.txt  ExampleCanvas.ui  ExampleScene.ui
Examples/DoublePendulum/: CMakeLists.txt  MainWindow.ui
Examples/Example_components/: ExampleCanvas.ui  ExampleScene.ui
Examples/FluidSim/: FluidSim.ui
Examples/GradientDecent/: MainWindow.ui
Examples/Gravity/: ExampleScene.ui
Examples/LightSim/: CMakeLists.txt  LightSimCanvas.ui  LightSimScene.ui
Examples/LightSim/inc/: ConcaveLens.h  ConcaveLense.h  ConvexLens.h  ConvexLense.h  CurvedMirror.h  GlasRectangle.h  Laser.h  LaserBeamSegment.h  LaserInfo.h  LightRay.h  LightSimCanvas.h  LightSimScene.h  Mirror.h  OpticalElement.h  SimpleLens.h
Examples/LightSim/src/: ConcaveLens.cpp  ConcaveLense.cpp  ConvexLens.cpp  ConvexLense.cpp  CurvedMirror.cpp  GlasRectangle.cpp  Laser.cpp  LaserBeamSegment.cpp  LightSimCanvas.cpp  LightSimScene.cpp  Mirror.cpp  OpticalElement.cpp  SimpleLens.cpp  main.cpp
Examples/Sandbox/: CMakeLists.txt  Sandbox.pro  sandbox.ui
Examples/Template/: ExampleScene.ui
Sandbox/: CMakeLists.txt  Sandbox.pro  main.cpp  sandbox.cpp  sandbox.h  sandbox.ui  ui_sandbox.h
Sandbox/inc/: AABBDisplayer.h  DrawableVector.h  SandboxObject.h  VectorDisplayer.h  sandbox.h
Sandbox/src/: SandboxObject.cpp  main.cpp  sandbox.cpp
UnitTests/: UnitTests.pro
UnitTests/ExampleTest/: main.cpp  tests.h
UnitTests/PerformanceTest/: main.cpp  tests.h
UnitTests/QSFML_UnitTests/: main.cpp  tests.h
UnitTests/SFML_ViewWidget/: SFML_ViewWidget.pro  tst_sfml_viewwidget.cpp
core/: CMakeLists.txt  QtLocator.cmake
core/inc/: QSFML_EditorWidget.h  QSFML_EditorWidget_ForwardDeclaration.h  QSFML_EditorWidget_base.h  QSFML_EditorWidget_debug.h  QSFML_EditorWidget_global.h  QSFML_EditorWidget_info.h  QSFML_ForwardDeclaration.h  QSFML_base.h  QSFML_debugSettings.h  QSFML_global.h
core/inc/assets/: TextureManager.h  TextureMap.h
core/inc/canvas/: Canvas.h  CanvasForwardDeclaration.h  CanvasObjectContainer.h  CanvasObjectGroup.h  CanvasObjectLayerGroup.h  CanvasSettings.h  CanvasThreadWorker.h  RenderLayer.h  Stats.h
core/inc/components/: AbstractPressEvent.h  Button.h  Component.h  Drawable.h  DrawableVector.h  KeyPressEvent.h  Line.h  MouseFollower.h  MousePressEvent.h  PointPainter.h  RectPainter.h  SfEventHandle.h  Text.h  TextureAnimation.h  Transform.h
core/inc/components/base/: AbstractPressEvent.h  Component.h  Drawable.h  SfEventHandle.h
core/inc/components/drawable/: Image.h  Line.h  LinePainter.h  PathPainter.h  PixelPainter.h  PointPainter.h  RectPainter.h  Shape.h  Text.h  VectorFieldPainter.h  VectorPainter.h
core/inc/components/physics/: Collider.h
core/inc/events/: DestroyEvent.h
core/inc/objects/: BackgroundGrid.h  CameraController.h  CameraWindow.h  CanvasObject.h  DefaultEditor.h  LineChart.h  RuntimeInfo.h  VisibleCamera.h
core/inc/objects/base/: CanvasObject.h  ChildObjectsManager.h  ComponentManager.h  GameObject.h  GameObject.inl
core/inc/scene/: GameObjectContainer.h  GameObjectGroup.h  GameObjectLayerGroup.h  RenderLayer.h  Scene.h  SceneLogger.h  SceneSettings.h  SceneThreadWorker.h
core/inc/utilities/: AABB.h  CameraRecorder.h  CollisionInfo.h  Color.h  DifferentialEvolution.h  LifetimeChecker.h  ObjectQuadTree.h  Origin.h  Pathfinder.h  PerlinNoise.h  RandomEngine.h  Ray.h  Signal.h  Singelton.h  Stats.h  ThreadWorker.h  Timer.h  Transformable.h  Updatable.h  VectorOperations.h
core/inc/utilities/TileMap/: Chunk.h  ChunkData.h  ChunkManager.h
core/src/: QSFML_EditorWidget_debug.cpp  QSFML_EditorWidget_info.cpp
core/src/assets/: TextureManager.cpp  TextureMap.cpp
core/src/canvas/: Canvas.cpp  CanvasObjectContainer.cpp  CanvasObjectGroup.cpp  CanvasObjectLayerGroup.cpp  CanvasThreadWorker.cpp  Stats.cpp
core/src/components/: AbstractPressEvent.cpp  Button.cpp  Component.cpp  Drawable.cpp  DrawableVector.cpp  KeyPressEvent.cpp  Line.cpp  MouseFollower.cpp  MousePressEvent.cpp  PointPainter.cpp  RectPainter.cpp  SfEventHandle.cpp  Text.cpp  TextureAnimation.cpp  Transform.cpp
core/src/components/base/: AbstractPressEvent.cpp  Component.cpp  Drawable.cpp  SfEventHandle.cpp
core/src/components/drawable/: Image.cpp  Line.cpp  LinePainter.cpp  PathPainter.cpp  PixelPainter.cpp  PointPainter.cpp  RectPainter.cpp  Shape.cpp  Text.cpp  VectorFieldPainter.cpp  VectorPainter.cpp
core/src/components/physics/: Collider.cpp
core/src/events/: DestroyEvent.cpp
core/src/objects/: BackgroundGrid.cpp  CameraController.cpp  CameraWindow.cpp  CanvasObject.cpp  DefaultEditor.cpp  DrawableBoxCollider.cpp  LineChart.cpp  RuntimeInfo.cpp  VisibleCamera.cpp
core/src/objects/base/: CanvasObject.cpp  GameObject.cpp  GameObject_ChildManager.cpp  GameObject_ComponentManager.cpp  GameObject_SceneInterface.cpp  GameObject_TransformInterface.cpp
core/src/scene/: GameObjectContainer.cpp  GameObjectGroup.cpp  GameObjectLayerGroup.cpp  GmaeObjectContainer.cpp  Scene.cpp  SceneLogger.cpp  SceneThreadWorker.cpp
core/src/utilities/: AABB.cpp  CameraRecorder.cpp  Color.cpp  DifferentialEvolution.cpp  LifetimeChecker.cpp  ObjectQuadTree.cpp  Origin.cpp  Pathfinder.cpp  PerlinNoise.cpp  RandomEngine.cpp  Ray.cpp  Stats.cpp  ThreadWorker.cpp  Timer.cpp  VectorOperations.cpp
core/src/utilities/TileMap/: Chunk.cpp  ChunkData.cpp  ChunkManager.cpp
dependencies/: EASTL.cmake  FastNoiseLite.cmake  ImGuiSFML.cmake  SFML.cmake
documentation/: Canvas.md  CanvasObject.md  Component.md  GameObject.md  Scene.md  concept.md
documentation/Images/: Hirarchy.drawio  ObjectHirarchy.drawio  UpdateLoopSingle.drawio
inc/: QSFML_EditorWidget.h  SFML_EditorWidget.h  sfml_editorwidget_global.h
(+179 files in other folders)
